remove side borders

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title: Home
         </div>
 
         <div class="row">
-            <div class="col-12 topborder bottomborder">
+            <div class="col-12 topborder bottomborder nosideborder">
                 <div class="zcarousel">
                     {% for feature in site.data.features %}
                     <div>
