Finalize text and layout of root page.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@ title: Home
 
         <div class="row">
             <div class="col-12">
+                <p class="meblurb">
+                    Hello! I'm Matthew. This website catalogues the things that I've done over the years.
+                    <br />
+                    My projects range from technological creations to various writings, check them out below!
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
                 <div class="socialtray">
                     {% for socialsite in site.data.social %}
                     <a class="socialicon" href="{{ socialsite.link }}">
