--- a/_tools/ktanerepojson.html
+++ b/_tools/ktanerepojson.html
@@ -186,7 +186,7 @@ title: "KTANE Repo JSON Tool"
         }
 
         function generateSortKey() {
-            $("#sortKey").val($("#moduleName").val().toUpperCase().replace(/\s+/g, ""));
+            $("#sortKey").val($("#moduleName").val().toUpperCase().replace(/^the/i, "").replace(/\s+/g, ""));
         }
 
         function setup() {
@@ -332,7 +332,7 @@ title: "KTANE Repo JSON Tool"
                             </div>
                             <div class="form-group">
                                 <label for="twitchPlaysScore">Twitch Plays Score</label>
-                                <input type="number" class="form-control module-info" id="twitchPlaysScore" value="0" data-default="0" min="0" max="20" disabled />
+                                <input type="number" class="form-control module-info" id="twitchPlaysScore" value="0" data-default="0" min="0" disabled />
                             </div>
                         </div>
                         <div class="col-6">
