--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ---
 title: Home
+layout: empty
 ---
-<!DOCTYPE html>
-<html lang="en">
-{% include head.html %}
+<head>
+    {% include head.html %}
+</head>
 <body>
+    <!-- Slick carousel initialization -->
     <script type="text/javascript">
         $(document).ready(function () {
             $(".zcarousel").slick({
@@ -45,12 +47,14 @@ title: Home
     </script>
 
     <div class="container mainpage">
+        <!-- Name -->
         <div class="row">
             <div class="col-12">
                 <a class="namelogo" href="/">MATTHEW MCCASKILL</a>
             </div>
         </div>
 
+        <!-- Short bio -->
         <div class="row">
             <div class="col-12">
                 <p class="meblurb">
@@ -61,6 +65,8 @@ title: Home
             </div>
         </div>
 
+        <!-- Social media links -->
+        {% comment %} Social media links can be changed in _data/social.yml {% endcomment %}
         <div class="row">
             <div class="col-12">
                 <div class="socialtray">
@@ -73,6 +79,7 @@ title: Home
             </div>
         </div>
 
+        <!-- Navigation carousel -->
         <div class="row">
             <div class="col-12 topborder bottomborder nosideborder">
                 <div class="zcarousel">
@@ -91,6 +98,6 @@ title: Home
         </div>
     </div>
 
+    <!-- Copyright information -->
     {% include footer.html %}
 </body>
-</html>
