--- a/_tools/ktanerepojson.html
+++ b/_tools/ktanerepojson.html
@@ -1,10 +1,7 @@
 ---
 title: "KTANE Repo JSON Tool"
-layout: empty
+layout: tool
 ---
-<head>
-    {% include head.html %}
-
     <style>
         /* Heading and container */
         body {
